Fix panel collapse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1050,7 +1050,7 @@ button.close-ticket:hover {
 }
 
 .sidebar .customer-stats {
-    margin: 15px -15px -15px -15px;
+    margin: 15px -15px -12px -15px;
     border: none;
     border-radius: 0;
 }
@@ -1061,8 +1061,8 @@ button.close-ticket:hover {
     border-radius: 0;
 }
 
-.sidebar .customer-stats .list-group-item:first-child {
-    border-radius: 0;
+.sidebar .customer-stats .list-group-item:last-child{
+    border: none;
 }
 
 .sidebar .customer-stats .list-group-item .lead {
